# reconstruction

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  environment.yaml  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.github/: stale.yml
.github/workflows/: codeql.yml  dependency-review.yml  main.yml  sonarqube.yml
notebooks/: check_dataset.ipynb  example.ipynb  inference.ipynb  train_example.ipynb
reconstruction/: convert_pkl2json.py
reconstruction/datahandler/: datahandler.py
reconstruction/segmentation/: segmentation.py
reconstruction/utils/: utils.py
src/: create_dataset.py  download_data.py
src/config_manager/: manager.py
src/data_loaders/: dataloader.py
src/datahandler/: datahandler.py
src/model/: cascade_net.py  layers.py  losses.py  net.py  unet.py
src/pointcloud/: pointcloud.py
src/segmentation/: segmentation.py
src/trainers/: train_engine.py
src/utils/: utils.py
tests/: test_datahandler.py  test_pointcloud.py  test_segmentation.py  test_utils.py
