[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint."MASTER"]
ignore = [".ipynb_checkpoints"]

[tool.pylint."TYPECHECK"]
generated-members = ["torch"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100