[metadata]
name = Reconstruction
version = 0.0.1
author = Karan Rampal
author_email = karan.rampal@hm.com
description = A project for 3D reconstruction from RGBD images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hm-group/reconstruction
project_urls =
    Bug Tracker = https://github.com/hm-group/reconstruction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = reconstruction
packages = find:
python_requires = >=3.8
install_requires =
    tensorboard

[options.packages.find]
where = reconstruction